--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,9 @@
-
-@import "tw-animate-css";
+@import "tailwindcss/preflight";
 
 @plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
 
-@tailwind base;
-@tailwind components;
 @tailwind utilities;
 
 @theme inline {
